--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
 <body>
   <% flash.each do |key, value| %>
     <div class='flash' id='<%= key %>'>
+      <%= notice %>
+      <%= alert %>
       <%= value %>
     </div>
   <% end %>
